--- a/cli/install
+++ b/cli/install
@@ -15,8 +15,9 @@ CMDUtils.clear()
 
 parser = OptionParser()
 parser.add_option("-f", "--file", type="string", dest="file", default="", help="Path-To-APK")
-parser.add_option("-u", "--uninstall", action="store_true", dest="uninstall", default=False, help="Uninstalls the apk before installing")
-parser.add_option("-r", "--run", action="store_true", dest="run", default=False, help="Runs the apk after installing")
+parser.add_option("-u", "--uninstall", action="store_true", dest="uninstall", default=False, help="Uninstalls the apk")
+parser.add_option("-i", "--install", action="store_true", dest="install", default=False, help="Installs the apk")
+parser.add_option("-r", "--run", action="store_true", dest="run", default=False, help="Runs the apk")
 (arguments, args) = parser.parse_args()
 
 # ------------------------------------------- ARG VALIDATIONS -----------------------------------------------------#
@@ -47,5 +48,36 @@ ADBUtils.pretty_print_devices()
 package = ADBUtils.get_package_from_apk(arguments.file)
 main_activity = package + "/" + ADBUtils.get_launchable_activity(arguments.file)
 
-for device in devices:
-    threading.Thread(target=ADBUtils.install_and_run, args=(device, arguments.file, arguments.uninstall, arguments.run)).start()
+
+if (arguments.install != False):
+
+	#INSTALL APP
+
+	#DEVIDE ID AND APK FILE    REQUIRED
+
+	for device in devices:
+		threading.Thread(target=ADBUtils.install, args=(device, arguments.file)).start()
+
+else: 
+
+	package = ADBUtils.get_package_from_apk(arguments.file)
+
+	if(arguments.run != False):
+
+		#RUNS APP
+
+		#DEVIDE ID AND ACTIVITY FULL PATH    REQUIRED
+
+		activity_full_path = package + "/" + ADBUtils.get_launchable_activity(arguments.file)
+		for device in devices:
+			threading.Thread(target=ADBUtils.run, args=(device, activity_full_path)).start()
+
+	else:
+		if(arguments.uninstall != False):
+
+			#UNISTALL APP
+
+			#DEVICE ID AND PACKAGE REQUIRED
+
+			for device in devices:
+				threading.Thread(target=ADBUtils.uninstall, args=(device, package)).start()
